@@ -5,7 +5,7 @@
    */
 
 $proper_name  = 'Users';
-$version      = '2.4.10';
+$version      = '2.5.0';
 $register     = TRUE;
 $unregister   = TRUE;
 $import_sql   = TRUE;
